<?xml version="1.0"?>
<package format="3">
  <name>kachaka_pose_listener</name>
  <version>0.0.1</version>
  <description>Pose listener for Kachaka robot using tf (map->base_footprint)</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

